Update Problem Solving Day - 3.ipynb

--- a/Problem Solving Day - 3.ipynb
+++ b/Problem Solving Day - 3.ipynb
@@ -332,16 +332,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "85e370c7-2c9f-4098-924f-de9bc83f8773",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set the i-th bit of the number n\n",
+    "def setBit(n, i): \n",
+    "    return n | (1 << i)\n",
+    "\n",
+    "print(setBit(5, 1))  # 5 = 4 + 1 => 0000 0101 =>  0000 0110 => 7 (5 + 4)\n",
+    "print(setBit(8, 2))  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "28a8b0c9-e0ff-4070-981b-75d09b755486",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Complement the i-th bit of the number n\n",
+    "def complementBit(n, i):\n",
+    "    return n ^ (1 << i)\n",
+    "\n",
+    "print(complementBit(5, 0)) # 5 = 4 + 1 => 0000 0101 => 0000 0100\n",
+    "print(complementBit(5, 2))  \n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28a8b0c9-e0ff-4070-981b-75d09b755486",
+   "id": "feaf50df-99b4-41d0-aee1-626e917f7878",
    "metadata": {},
    "outputs": [],
    "source": []
