Update Problem Solving Day - 3.ipynb

--- a/Problem Solving Day - 3.ipynb
+++ b/Problem Solving Day - 3.ipynb
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "id": "85e370c7-2c9f-4098-924f-de9bc83f8773",
    "metadata": {},
    "outputs": [
@@ -340,7 +340,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7\n",
+      "29\n",
       "12\n"
      ]
     }
@@ -350,13 +350,13 @@
     "def setBit(n, i): \n",
     "    return n | (1 << i)\n",
     "\n",
-    "print(setBit(5, 1))  # 5 = 4 + 1 => 0000 0101 =>  0000 0110 => 7 (5 + 4)\n",
+    "print(setBit(25, 2))  # 5 = 4 + 1 => 0000 0101 =>  0000 0110 => 7 (5 + 4)\n",
     "print(setBit(8, 2))  \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "id": "28a8b0c9-e0ff-4070-981b-75d09b755486",
    "metadata": {},
    "outputs": [
@@ -364,7 +364,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
+      "29\n",
       "1\n"
      ]
     }
@@ -374,14 +374,69 @@
     "def complementBit(n, i):\n",
     "    return n ^ (1 << i)\n",
     "\n",
-    "print(complementBit(5, 0)) # 5 = 4 + 1 => 0000 0101 => 0000 0100\n",
+    "print(complementBit(25, 2)) # 5 = 4 + 1 => 0000 0101 => 0000 0100\n",
     "print(complementBit(5, 2))  \n"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "id": "d1d5a1e9-65be-4b0b-89c9-68054037c687",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Clear all bits in n from bit position i (right) to j (left) bit positions\n",
+    "#                                 7654 3210\n",
+    "# 63 = 32 + 16 + 8 + 4 + 2 + 1  = 0011 1111\n",
+    "# let i = 4, j = 2\n",
+    "# so result =                     0010 0011 => 32 + 2 + 1 = 35\n",
+    "\n",
+    "def clearRangeItoJ(n, i, j):\n",
+    "    mask = (1 << (i + 1)) | ((1 << j) - 1)\n",
+    "    return n & mask\n",
+    "\n",
+    "n = 63\n",
+    "i = 4\n",
+    "j = 2\n",
+    "print(clearRangeItoJ(n, i, j)) "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "feaf50df-99b4-41d0-aee1-626e917f7878",
+   "id": "c5043ade-503a-4b2e-86f4-42821c007b24",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "063d8b0a-1049-4f72-996d-ca75df0602af",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "412128ee-c832-4177-82fd-5e2f58d4ffc6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2dcdc3dc-3521-421e-867f-9dd8278767ce",
    "metadata": {},
    "outputs": [],
    "source": []
