Update Problem Solving Day - 3.ipynb

--- a/Problem Solving Day - 3.ipynb
+++ b/Problem Solving Day - 3.ipynb
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "id": "d1d5a1e9-65be-4b0b-89c9-68054037c687",
    "metadata": {},
    "outputs": [
@@ -388,7 +388,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "35\n"
+      " n = 63, i  4, j = 2 and result = 35\n"
      ]
     }
    ],
@@ -397,7 +397,12 @@
     "#                                 7654 3210\n",
     "# 63 = 32 + 16 + 8 + 4 + 2 + 1  = 0011 1111\n",
     "# let i = 4, j = 2\n",
-    "# so result =                     0010 0011 => 32 + 2 + 1 = 35\n",
+    "                                # mask1 = 1110 0000  => -1 << (i + j) - 1\n",
+    "                                # mask2 = 0000 0011  => ~((-1) << 2)\n",
+    "#                         mask1 | mask2 = 1110 0011 \n",
+    "# # 63 = 32 + 16 + 8 + 4 + 2 + 1  =       0011 1111  & \n",
+    "#                                   ------------------------\n",
+    "# so result =                             0010 0011 => 32 + 2 + 1 = 35\n",
     "\n",
     "def clearRangeItoJ(n, i, j):\n",
     "    mask = (1 << (i + 1)) | ((1 << j) - 1)\n",
@@ -406,7 +411,7 @@
     "n = 63\n",
     "i = 4\n",
     "j = 2\n",
-    "print(clearRangeItoJ(n, i, j)) "
+    "print(f\" n = {n}, i  {i}, j = {j} and result = {clearRangeItoJ(n, i, j)}\") "
    ]
   },
   {
