Add bit manipulation examples and set bit counter
Added code to replace the i-th bit in a number and to count the number of set bits in an integer, with example usage and explanations. Also added several empty code cells for future content.

--- a/Problem Solving Day - 3.ipynb
+++ b/Problem Solving Day - 3.ipynb
@@ -416,19 +416,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "c5043ade-503a-4b2e-86f4-42821c007b24",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "47\n"
+     ]
+    }
+   ],
+   "source": [
+    "# In n i-th bit will be replaced by b (either 0 or 1)\n",
+    "def replaceithBit(n, i, b):\n",
+    "    mask = ~(1 << i)            \n",
+    "    cleared = n & mask         \n",
+    "    return cleared | (b << i)  \n",
+    "\n",
+    "\n",
+    "n = 63\n",
+    "i = 4\n",
+    "b = 0\n",
+    "print(replaceithBit(n, i, b))\n",
+    "\n",
+    "# 63 = 32 + 16 + 8 + 4 + 2 + 1  = 0011 1111\n",
+    "#                                 0001 0000 & \n",
+    "#                               ---------------\n",
+    "#                      cleared  = 0011 1111\n",
+    "#                                 1110 1111  |\n",
+    "#                               ---------------\n",
+    "#                                 0010 1111 => 32 + 8 + 4 + 2 + 1 => 47 "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "063d8b0a-1049-4f72-996d-ca75df0602af",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For n = 63, number of set bits = 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find the number of set bits in a numner n\n",
+    "# for n = 63 = 0011 1111 , output will be 6\n",
+    "def countSetBits(n):\n",
+    "    count = 0\n",
+    "    while n > 0:\n",
+    "        if n & 1:\n",
+    "            count += 1\n",
+    "        n = n >> 1\n",
+    "    return count\n",
+    "n = 63\n",
+    "print(f\"For n = {n}, number of set bits = {countSetBits(n)}\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -442,6 +490,38 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2dcdc3dc-3521-421e-867f-9dd8278767ce",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59bec29b-7c4d-4196-b867-efa598fd9a6d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f273a91-0ef5-4715-8acb-21f8de7a7e15",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a541d518-77dc-4e31-a412-60b87276549b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87cc58cc-c853-4a70-bd69-6dcff0fbc56d",
    "metadata": {},
    "outputs": [],
    "source": []
