Update Problem Solving Day - 3.ipynb

--- a/Problem Solving Day - 3.ipynb
+++ b/Problem Solving Day - 3.ipynb
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 56,
    "id": "063d8b0a-1049-4f72-996d-ca75df0602af",
    "metadata": {},
    "outputs": [
@@ -480,11 +480,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "412128ee-c832-4177-82fd-5e2f58d4ffc6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Looping\n",
+      "Looping\n",
+      "Looping\n",
+      "For n = 41, number of set bits = 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Improved - Find the number of set bits in a numner n\n",
+    "# for n = 41 = 32 + 8 +1 => 0010 1001 = output will be 3\n",
+    "def countSetBits(n):           #   ans       n\n",
+    "    count = 0                  # ---------------\n",
+    "    while n:                   #   0         41 = 101001\n",
+    "        n = n & (n - 1)        #   1         41 & 40 = 101001 & 101000 = 101000\n",
+    "        count += 1             #   2         40 & 39 = 101000 & 100111 = 100000 \n",
+    "        print(\"Looping\")       #   3         32 & 31 = 100000 & 011111 = 0\n",
+    "    return count\n",
+    "n = 41\n",
+    "print(f\"For n = {n}, number of set bits = {countSetBits(n)}\")\n"
+   ]
   },
   {
    "cell_type": "code",
