Add power of two check problem and solution
Introduced a new problem statement and code cell to determine if a number is a power of two. Added markdown explanation and sample input/output, along with a function using bitwise operations for the solution.

--- a/Problem Solving Day - 3.ipynb
+++ b/Problem Solving Day - 3.ipynb
@@ -510,20 +510,45 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2dcdc3dc-3521-421e-867f-9dd8278767ce",
+   "cell_type": "markdown",
+   "id": "e774c312-9d2a-448a-987e-a19dabd1ab96",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Problem on Power of Two\n",
+    "## Given an integer number n, write a function to determine if it is a power of tow or not\n",
+    "## Example:\n",
+    "1. if n = 16 output = True\n",
+    "2. if n = 64 output = False"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "59bec29b-7c4d-4196-b867-efa598fd9a6d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a number 60\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def pow2(num):\n",
+    "    return n > 0 and (n & (n - 1)) == 0\n",
+    "\n",
+    "n = int(input(\"Enter a number\"))\n",
+    "print(pow2(n))"
+   ]
   },
   {
    "cell_type": "code",
@@ -545,6 +570,62 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "87cc58cc-c853-4a70-bd69-6dcff0fbc56d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5d716c0-bf25-4685-9d32-830f3978bf3d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a59fc0d-9b78-48a8-ad67-b42447d3112c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c72e621-8691-4166-bcf7-dcb6c48594e3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e38ea281-ea02-4348-8d17-108ad1c40cbd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3b25351-4101-49db-a3d3-2e69214ce4af",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd5f27d9-14fc-4825-b066-60d35312ecc5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "800413a8-8020-440c-988a-d4b8e05b0d93",
    "metadata": {},
    "outputs": [],
    "source": []
