Update Problem Solving Day - 3.ipynb

--- a/Problem Solving Day - 3.ipynb
+++ b/Problem Solving Day - 3.ipynb
@@ -543,20 +543,55 @@
     }
    ],
    "source": [
+    "# n = 100 => 64 + 32 + 4       = 0110 0100\n",
+    "# n - 1 =99 => 64 + 32 + 2 + 1 = 0110 0011\n",
+    "#                              & ------------\n",
+    "#                                0 110 0000 != 0\n",
+    "# n = 64 =>                0100 0000\n",
+    "# n - 1 = 63    =          0011 1111\n",
+    "#                         -------------\n",
+    "#                          0000 0000 = 0 = n & (n - 1)\n",
+    "\n",
+    "# Logic - 1\n",
     "def pow2(num):\n",
     "    return n > 0 and (n & (n - 1)) == 0\n",
     "\n",
     "n = int(input(\"Enter a number\"))\n",
-    "print(pow2(n))"
+    "print(pow2(n))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "7f273a91-0ef5-4715-8acb-21f8de7a7e15",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n = 16 and output = True\n",
+      "n = 64 and output = True\n",
+      "n = 60 and output = False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Logic - 2\n",
+    "def power_of_two(n):\n",
+    "    power = 0\n",
+    "    while (2 ** power < n):\n",
+    "        power += 1\n",
+    "    if (2 ** power == n): return True\n",
+    "    else: return False\n",
+    "\n",
+    "n = 16\n",
+    "print(f\"n = {n} and output = {power_of_two(n)}\")\n",
+    "n = 64\n",
+    "print(f\"n = {n} and output = {power_of_two(n)}\")\n",
+    "n = 60\n",
+    "print(f\"n = {n} and output = {power_of_two(n)}\")\n"
+   ]
   },
   {
    "cell_type": "code",
