Add Single Number problem and solution
Added a markdown cell describing the Single Number problem and provided a code cell with a solution using XOR to find the unique element in the array.

--- a/Problem Solving Day - 3.ipynb
+++ b/Problem Solving Day - 3.ipynb
@@ -594,12 +594,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a541d518-77dc-4e31-a412-60b87276549b",
+   "cell_type": "markdown",
+   "id": "e55a0929-e773-4684-9d14-78e5a3bdd6f3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Single Number - 1\n",
+    "Given a non-empty array of integers, every element apppears twice except one. Find that single One.\n",
+    "1. Example 1: input: [11, 33, 22, 44, 33, 11, 22], output: 44\n",
+    "2. Example 2: input: [10, 20, 40, 30, 20, 10, 60, 60, 30], output: 40"
+   ]
   },
   {
    "cell_type": "code",
@@ -607,7 +610,17 @@
    "id": "87cc58cc-c853-4a70-bd69-6dcff0fbc56d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def singleNumber(self, nums):\n",
+    "        \"\"\"\n",
+    "        :type nums: List[int]\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
+    "        ans = 0\n",
+    "        for num in nums:\n",
+    "            ans ^= num\n",
+    "        return ans"
+   ]
   },
   {
    "cell_type": "code",
