Add multiple solutions for Single Number problems
Introduced two approaches for the Single Number problem and added three implementations for Single Number II, including bit manipulation and Counter-based methods. Also added relevant markdown sections and updated cell IDs for better organization.

--- a/Problem Solving Day - 3.ipynb
+++ b/Problem Solving Day - 3.ipynb
@@ -611,6 +611,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Way - 1\n",
     "def singleNumber(self, nums):\n",
     "        \"\"\"\n",
     "        :type nums: List[int]\n",
@@ -628,15 +629,23 @@
    "id": "d5d716c0-bf25-4685-9d32-830f3978bf3d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Way - 2\n",
+    " def singleNumber(self, nums: List[int]) -> int:\n",
+    "        counter = Counter(nums)\n",
+    "\n",
+    "        for key, val in counter.items():\n",
+    "            if val == 1:\n",
+    "                return key"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9a59fc0d-9b78-48a8-ad67-b42447d3112c",
+   "cell_type": "markdown",
+   "id": "ddad777f-b5cd-440b-84ac-6c18840768b7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Single Number - II\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -644,15 +653,74 @@
    "id": "1c72e621-8691-4166-bcf7-dcb6c48594e3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Way - 1\n",
+    "def singleNumber(self, nums):\n",
+    "        \"\"\"\n",
+    "        :type nums: List[int]\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
+    "    ans = 0\n",
+    "    for k in range(32):\n",
+    "        temp = 1 << k\n",
+    "        counOnes = 0\n",
+    "        for num in nums:\n",
+    "            if num & temp:\n",
+    "                countOnes += 1\n",
+    "        if countOnes % 3 == 1:\n",
+    "            ans = ans | temp\n",
+    "\n",
+    "    if ans >= 2 ** 31:\n",
+    "        ans -= 2 ** 32\n",
+    "    return ans"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2de6948f-1b6a-40da-af33-f9da75f44999",
+   "metadata": {},
+   "source": [
+    "# Single Number II"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "e38ea281-ea02-4348-8d17-108ad1c40cbd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27\n",
+      "1\n",
+      "[55, 44]\n",
+      "26\n",
+      "2\n",
+      "[50, 40]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def singleNumber3(nums):\n",
+    "    syndrome = 0\n",
+    "    for num in nums:\n",
+    "        syndrome ^= num\n",
+    "    print(syndrome)\n",
+    "    position = 1\n",
+    "    while syndrome & position == 0:\n",
+    "        position <<= 1\n",
+    "    answer1 = 0\n",
+    "    print(position)\n",
+    "    for num in nums:\n",
+    "        if num & position != 0: answer1 = answer1 ^ num\n",
+    "    return [answer1, syndrome ^ answer1]\n",
+    "        \n",
+    "    \n",
+    "print(singleNumber3([11, 33, 22, 44, 33, 11, 22, 55]))    \n",
+    "print(singleNumber3([10, 20, 40, 30, 20, 10, 60, 60, 30, 50]))   "
+   ]
   },
   {
    "cell_type": "code",
@@ -674,6 +742,38 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "800413a8-8020-440c-988a-d4b8e05b0d93",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0828ac1-d5eb-41e2-97e1-d7d5bef65f34",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a46ede9-0b53-4d81-a419-d013eebc96a0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb48f447-f3e4-4462-befc-4d9e04c3196b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75d32cd5-b4eb-453f-9f43-7b3c9ddfe4aa",
    "metadata": {},
    "outputs": [],
    "source": []
