Refactor and fix Single Number problems in notebook
Corrected section titles for Single Number problems, fixed function naming for Single Number II and III, and re-implemented the Single Number II solution with explanations and examples. Improved code clarity and organization for better understanding.

--- a/Problem Solving Day - 3.ipynb
+++ b/Problem Solving Day - 3.ipynb
@@ -598,7 +598,7 @@
    "id": "e55a0929-e773-4684-9d14-78e5a3bdd6f3",
    "metadata": {},
    "source": [
-    "## Single Number - 1\n",
+    "## Single Number - I\n",
     "Given a non-empty array of integers, every element apppears twice except one. Find that single One.\n",
     "1. Example 1: input: [11, 33, 22, 44, 33, 11, 22], output: 44\n",
     "2. Example 2: input: [10, 20, 40, 30, 20, 10, 60, 60, 30], output: 40"
@@ -641,46 +641,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddad777f-b5cd-440b-84ac-6c18840768b7",
-   "metadata": {},
-   "source": [
-    "## Single Number - II\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c72e621-8691-4166-bcf7-dcb6c48594e3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Way - 1\n",
-    "def singleNumber(self, nums):\n",
-    "        \"\"\"\n",
-    "        :type nums: List[int]\n",
-    "        :rtype: int\n",
-    "        \"\"\"\n",
-    "    ans = 0\n",
-    "    for k in range(32):\n",
-    "        temp = 1 << k\n",
-    "        counOnes = 0\n",
-    "        for num in nums:\n",
-    "            if num & temp:\n",
-    "                countOnes += 1\n",
-    "        if countOnes % 3 == 1:\n",
-    "            ans = ans | temp\n",
-    "\n",
-    "    if ans >= 2 ** 31:\n",
-    "        ans -= 2 ** 32\n",
-    "    return ans"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "2de6948f-1b6a-40da-af33-f9da75f44999",
    "metadata": {},
    "source": [
-    "# Single Number II"
+    "# Single Number III"
    ]
   },
   {
@@ -703,7 +667,7 @@
     }
    ],
    "source": [
-    "def singleNumber3(nums):\n",
+    "def singleNumber2(nums):\n",
     "    syndrome = 0\n",
     "    for num in nums:\n",
     "        syndrome ^= num\n",
@@ -718,25 +682,85 @@
     "    return [answer1, syndrome ^ answer1]\n",
     "        \n",
     "    \n",
-    "print(singleNumber3([11, 33, 22, 44, 33, 11, 22, 55]))    \n",
-    "print(singleNumber3([10, 20, 40, 30, 20, 10, 60, 60, 30, 50]))   "
+    "print(singleNumber2([11, 33, 22, 44, 33, 11, 22, 55]))    \n",
+    "print(singleNumber2([10, 20, 40, 30, 20, 10, 60, 60, 30, 50]))   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ddad777f-b5cd-440b-84ac-6c18840768b7",
+   "metadata": {},
+   "source": [
+    "## Single Number - II"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f3b25351-4101-49db-a3d3-2e69214ce4af",
+   "execution_count": 73,
+   "id": "1c72e621-8691-4166-bcf7-dcb6c48594e3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 11 =>  0  0  1  0  1  1\n",
+    "# 22 =>  0  1  0  1  1  0\n",
+    "# 33 =>  1  0  0  0  0  1\n",
+    "# 44 =>  1  0  1  1  0  0\n",
+    "# 33 =>  1  0  0  0  0  1\n",
+    "# 11 =>  0  0  1  0  1  1\n",
+    "# 22 =>  0  1  0  1  1  0\n",
+    "# 33 =>  1  0  0  0  0  1\n",
+    "# 22 =>  0  1  0  1  1  0\n",
+    "# 11 =>  0  0  1  0  1  1\n",
+    "#     +  ----------------\n",
+    "#        4  3  4  4  6  6 % 3 = 101100 => 44\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bd5f27d9-14fc-4825-b066-60d35312ecc5",
+   "execution_count": 1,
+   "id": "f3b25351-4101-49db-a3d3-2e69214ce4af",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def singleNumber(self, nums: list[int]) -> int:\n",
+    "        ans = 0\n",
+    "        for bit in range(32):\n",
+    "            count = 0\n",
+    "            for num in nums:\n",
+    "                if (num >> bit) & 1:\n",
+    "                    count += 1\n",
+    "            if count % 3 != 0:\n",
+    "                ans |= (1 << bit)\n",
+    "        return ans\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "bd5f27d9-14fc-4825-b066-60d35312ecc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "101100\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Approach - 2\n",
+    "def dec_to_bin(num):\n",
+    "    mask = 1\n",
+    "    result = \"\"\n",
+    "    while (num != 0):\n",
+    "        result = (\"1\" if num & mask else \"0\") + result\n",
+    "        num = num >> 1\n",
+    "    print(result)\n",
+    "dec_to_bin(44)"
+   ]
   },
   {
    "cell_type": "code",
