Add Longest Increasing Subsequence solutions
Added two implementations for the Longest Increasing Subsequence problem in the notebook. The first function contains some errors, while the second function 'lengthOfLIS' provides a correct and efficient solution using binary search.

--- a/Problem Solving Day 4.ipynb
+++ b/Problem Solving Day 4.ipynb
@@ -188,7 +188,61 @@
    "id": "f78b3edb-3e84-4c98-977d-f3f66cff86ac",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Longest Increasing Subsequence\n",
+    "def Lonest_Increasing_Subsequence(num):\n",
+    "    sub = [0] * len(nums)\n",
+    "    for n in nums:\n",
+    "        i = bisect.bisect_left(sub, num)\n",
+    "        if i == len(sub):\n",
+    "            sub.append(num)\n",
+    "        else:\n",
+    "            sub[i] = num\n",
+    "    return len(sub)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab2cf2ca-337e-45a7-9c4d-5351bd250e1a",
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19af3c7a-e889-42dd-94de-8d51d03f6905",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb7ef47f-750d-41af-932b-ce043783643c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33d173b6-8a3d-47e9-a652-955ee6d686a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lengthOfLIS(nums):\n",
+    "    sub = []  \n",
+    "    for num in nums:\n",
+    "        i = bisect.bisect_left(sub, num)\n",
+    "        if i == len(sub):\n",
+    "            sub.append(num)  \n",
+    "        else:\n",
+    "            sub[i] = num     \n",
+    "    return len(sub)"
+   ]
   }
  ],
  "metadata": {
