Convert empty code cell to markdown heading
Replaced an unused code cell with a markdown cell containing the heading 'Buy and Sell Stock Problems' for better notebook organization and readability.

--- a/Problem Solving Day 4.ipynb
+++ b/Problem Solving Day 4.ipynb
@@ -203,12 +203,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ab2cf2ca-337e-45a7-9c4d-5351bd250e1a",
+   "cell_type": "markdown",
+   "id": "09842b6c-cb3e-4cda-9729-ed488e41b6d4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Buy and Sell Stock Problems "
+   ]
   },
   {
    "cell_type": "code",
