--- a/Problem Solving Day 4.ipynb
+++ b/Problem Solving Day 4.ipynb
@@ -213,18 +213,73 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19af3c7a-e889-42dd-94de-8d51d03f6905",
+   "id": "1a074146-29a6-4bc4-9a53-437d918e509f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Leetcode - 121"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bb7ef47f-750d-41af-932b-ce043783643c",
+   "execution_count": 13,
+   "id": "19af3c7a-e889-42dd-94de-8d51d03f6905",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Approach - 1\n",
+    "class Solution:\n",
+    "    def maxProfit(self, prices: List[int]) -> int:\n",
+    "        m,M=float('+inf'),0\n",
+    "        for price in prices:\n",
+    "            m=min(m,price)\n",
+    "            M=max(M,price-m)\n",
+    "        return M\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "bb7ef47f-750d-41af-932b-ce043783643c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7, 2, 2, 2, 2, 2, 1, 1, 1, 1, 1] [8, 8, 8, 8, 7, 7, 7, 7, 7, 7, 7]\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Approach - 2\n",
+    "class Solution:\n",
+    "    def maxProfit(self, prices):\n",
+    "        n = len(prices)\n",
+    "        dp1 = [0 for _ in range(n)]\n",
+    "        dp1[0] = prices[0]\n",
+    "        dp2 = [0 for _ in range(n)]\n",
+    "        dp2[n - 1] = prices[n - 1]\n",
+    "        for i in range(1, n):\n",
+    "            if dp1[i- 1] > prices[i]:\n",
+    "                dp1[i] = prices[i]\n",
+    "            else:\n",
+    "                dp1[i] = dp1[i - 1]\n",
+    "        for i in range(n - 2, -1, -1):\n",
+    "            if dp2[i + 1] < prices[i]:\n",
+    "                dp2[i] = prices[i]\n",
+    "            else:\n",
+    "                dp2[i] = dp2[i + 1]\n",
+    "        print(dp1, dp2)\n",
+    "        answer = 0\n",
+    "        for i in range(n):\n",
+    "            if answer < dp2[i] - dp1[i]:\n",
+    "                answer = dp2[i] - dp1[i]\n",
+    "        return answer\n",
+    "print(Solution().maxProfit([7, 2, 5, 8, 6, 3, 1, 4, 5, 4, 7]))"
+   ]
   },
   {
    "cell_type": "code",
