Add Day 4 notebook and update Day 1 and 3 files
Added 'Problem Solving - Day - 4.ipynb' with dynamic programming and stock problems. Renamed 'Problem Solving Day - 3.ipynb' to 'Problem Solving - Day - 3.ipynb'. Cleaned up a comment in 'Problem Solving - Day 1.ipynb' for clarity.

--- a/Problem Solving - Day 1.ipynb
+++ b/Problem Solving - Day 1.ipynb
@@ -1066,8 +1066,7 @@
     "    t = str(3 * n)\n",
     "\n",
     "    if len(t) == len(s):\n",
-    "        # if 3*n is s without its first char, plus that first char at the end\n",
-    "        if t == s[1:] + s[0]:\n",
+    "        if t == s[1:] + s[0]: # 3*n is s without its first char, plus that first char at the end\n",
     "            print(n)\n",
     "    n += 1\n"
    ]
