Expand explanation of dynamic programming uses
Added clarification and examples for the two main uses of dynamic programming: finding optimal solutions and counting the number of solutions. Enhanced introductory context to help readers understand the importance and application of dynamic programming.

--- a/Problem Solving - Day - 4.ipynb
+++ b/Problem Solving - Day - 4.ipynb
@@ -10,8 +10,14 @@
     "\n",
     "There are two uses for Dynamic Programming:\n",
     "\n",
-    "1. Finding an Optimal Solution: We want to find a solution that is as large as possible or as small as possible.\n",
-    "2. "
+    "There are two uses for Dynamic Programming:\n",
+    "\n",
+    "1. **Finding an Optimal Solution** : We want to find a solution that is as large as possible or as small as possible.<br>\n",
+    "2. **Counting the number of Solutions** : We want to calculate the total number of possible solutions. <br>\n",
+    "\n",
+    "We will first see how dynamic programming can be used to find an optimal solution, and then we will use the same idea for counting the solutions. Understanding dynamic programming is a milestone in every competitive programmer's career. While the basic idea is simple, the challenge is how to apply dynamic programming to different problems.\n",
+    "\n",
+    "This section will introduce a set of classic problems that are good starting point.\n"
    ]
   },
   {
