Add bottom-up approach section for coin change problem
Introduced a new markdown section for the Minimum Coins Change Problem (Bottom-Up Approach) and added several empty code cells for future implementation or examples.

--- a/Problem Solving - Day - 4.ipynb
+++ b/Problem Solving - Day - 4.ipynb
@@ -429,6 +429,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "74949b5d-52d8-4f8a-99b1-3353619bc25f",
+   "metadata": {},
+   "source": [
+    "## Minimum Coins Change Problem (Bottom - Up Approach)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "784030ea-a1f6-43be-86b2-0f1a8a325961",
@@ -486,6 +494,38 @@
     "        if dp[amount] == math.inf: return -1\n",
     "        else: return dp[amount]\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e10c048-78c5-4842-b2b0-6b367ec0102f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9538b77e-e8b9-442f-acdf-dbf671ab8dbc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b7f8480-aa84-4df5-a7cc-1b7e7ccd61e0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c691f09-6f23-4a7b-b05f-033095bd56ff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
