Add solutions for Keyboard Row and LCS problems
Added two approaches for the Leetcode 'Keyboard Row' problem, including code and markdown explanations. Also included a solution for the 'Longest Common Subsequence' (LCS) problem with code and output demonstration. Updated notebook structure with new code and markdown cells.

--- a/Problem Solving - Day - 5.ipynb
+++ b/Problem Solving - Day - 5.ipynb
@@ -136,25 +136,133 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a513aab0-d55c-4b97-993d-bc592199b148",
+   "metadata": {},
+   "source": [
+    "# **Keyboard Row**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1c36dc1a-4b2a-4e78-938b-dcccbab23532",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Leetcode - 500\n",
+    "# Logic - 1\n",
+    "class Solution(object):\n",
+    "    row1 = set(\"qwertyuiop\")\n",
+    "    row2 = set(\"asdfghjkl\")\n",
+    "    row3 = set(\"zxcvbnm\")\n",
+    "\n",
+    "    def inarow(self, word):\n",
+    "        w = word.lower()\n",
+    "        if w[0] in Solution.row1:\n",
+    "            target = Solution.row1\n",
+    "        elif w[0] in Solution.row2:\n",
+    "            target = Solution.row2\n",
+    "        else:\n",
+    "            target = Solution.row3\n",
+    "        \n",
+    "        return all(ch in target for ch in w)\n",
+    "\n",
+    "    def findWords(self, words):\n",
+    "        \"\"\"\n",
+    "        :type words: List[str]\n",
+    "        :rtype: List[str]\n",
+    "        \"\"\"\n",
+    "        return [w for w in words if self.inarow(w)]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "eddf8022-4b3a-4f90-8dd6-7ba8d2a5e30c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Alaska', 'Dad']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Logic - 2\n",
+    "class Solution(object):\n",
+    "    def findWords(self, words):\n",
+    "        \"\"\"\n",
+    "        :type words: List[str]\n",
+    "        :rtype: List[str]\n",
+    "        \"\"\"\n",
+    "        rowset1 = set(\"qwertyuiop\")\n",
+    "        rowset2 = set(\"asdfghjkl\")\n",
+    "        rowset3 = set(\"zxcvbnm\")\n",
+    "        result = []\n",
+    "        for word in words:\n",
+    "            wordset = set(word.lower())\n",
+    "            if wordset.issubset(rowset1) or wordset.issubset(rowset2) or wordset.issubset(rowset3):\n",
+    "                result.append(word)\n",
+    "        return result\n",
+    "print(Solution().findWords([\"Hello\",\"Alaska\",\"Dad\",\"Peace\"]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02389afa-688d-45bb-94b1-f68b8145daf5",
+   "metadata": {},
+   "source": [
+    "# **Longest Common Subsequence (LCS)**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "726e5004-f57e-4550-925b-5a65b817647e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 1, 1, 1, 1, 1]\n",
+      "[0, 0, 1, 1, 1, 1, 1]\n",
+      "[0, 0, 1, 1, 2, 2, 2]\n",
+      "[0, 0, 1, 1, 2, 2, 2]\n",
+      "[0, 0, 1, 1, 2, 2, 2]\n",
+      "[0, 1, 1, 1, 2, 3, 3]\n",
+      "[0, 1, 1, 1, 2, 3, 4]\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Leetcode - 1143\n",
+    "class Solution(object):\n",
+    "    def longestCommonSubsequence(self, text1, text2):\n",
+    "        m, n = len(text1), len(text2)\n",
+    "        dp = [[0] * (n + 1) for _ in range(m + 1)]\n",
+    "\n",
+    "        for i in range(1, m + 1):\n",
+    "            for j in range(1, n + 1):\n",
+    "                if text1[i - 1] == text2[j - 1]:\n",
+    "                    dp[i][j] = dp[i - 1][j - 1] + 1\n",
+    "                else:\n",
+    "                    dp[i][j] = max(dp[i - 1][j], dp[i][j - 1])\n",
+    "        for i in range(len(dp)): print(dp[i])\n",
+    "        return dp[m][n]\n",
+    "\n",
+    "print(Solution().longestCommonSubsequence(text1 = \"gxtxtab\", text2 = \"aggtab\")) "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35def5d6-688b-4811-b0d4-03545bbdec8a",
+   "id": "9dc1eed5-5b83-44e6-b5b4-1c22b339f2e7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -162,7 +270,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "726e5004-f57e-4550-925b-5a65b817647e",
+   "id": "7a8db282-e42b-4b75-ab8a-4c45e26a26e0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf47683a-be9b-4826-9dba-b21f3b71925b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed3643ca-6439-407d-8157-666fe9b51193",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0023f602-3f6d-42ec-a6da-c093b81c397c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "129d7a9b-a3c5-4614-a679-5e9c48ebba9a",
    "metadata": {},
    "outputs": [],
    "source": []
