Add alternative square pattern problem and solution
Introduced a new section titled 'Alternative Square Pattern' with a code cell that prints a specific square pattern based on user input. Includes sample input and output for demonstration.

--- a/Problem Solving - Day - 5.ipynb
+++ b/Problem Solving - Day - 5.ipynb
@@ -449,11 +449,57 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5fbb1de6-2b11-4255-8a74-ca090c0a72e3",
+   "cell_type": "markdown",
+   "id": "2b66dd71-916c-4fdb-a0bf-96f8cdf13571",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Alternative Square Pattern"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7ac45e9e-14b5-488e-b871-48315e8a67a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 \n",
+      "10 9 8 7 6 \n",
+      "11 12 13 14 15 \n",
+      "20 19 18 17 16 \n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "difference = 9\n",
+    "ll = 1\n",
+    "ul = 5\n",
+    "step = 1\n",
+    "for i in range(n):\n",
+    "    for j in range(ll, ul + step, step):\n",
+    "        print(str(j) + \" \", end = \"\")\n",
+    "    ll += difference\n",
+    "    difference = 10 - difference\n",
+    "    ul += difference\n",
+    "    step = -step\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "740b5a20-ffc2-41c8-b717-48e659d7ccbf",
+   "metadata": {},
    "source": []
   }
  ],
